# turing_machine_rust

./: Cargo.toml
examples/: 3.txt  add_bin.tmprog.json  increment_dec.tmprog.json  running_ones.tmprog.json
src/: main.rs
