[package]
name = "turing-machine"
version = "0.1.0"
authors = ["InnProgress <arnoldautuch4@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0"
rayon = "1.4.0"
crossterm = "0.17.7"